# prempti

./: CLAUDE.md  Cargo.toml  Makefile  OWNERS  README.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md
.github/workflows/: ci.yaml  release.yaml
configs/: README.md  falco.coding_agents_plugin.yaml  falco.yaml  supervisor.yaml
hooks/claude-code/: Cargo.toml  Makefile  README.md
hooks/codex/: Cargo.toml  Makefile  README.md
hooks/codex/src/: main.rs  proc_lineage.rs
hooks/copilot/: Cargo.toml  Makefile  README.md
installers/linux/: README.md  coding-agents-kit.service  install.sh  package.sh  prempti.service
installers/macos/: README.md  build-falco.sh  dev.falcosecurity.coding-agents-kit.plist  dev.falcosecurity.prempti.plist  distribution.xml  falco-macos-http-output.patch  install.sh  package.sh
installers/windows/: Package.wxs  README.md  build-falco.ps1  coding-agents-kit-launcher.ps1  falco-windows-http-output.patch  license.rtf  package.ps1  prempti-launcher.ps1
plugins/coding-agent-plugin/: README.md
plugins/coding-agents-plugin/: Cargo.toml  README.md
rules/: README.md  seen.yaml
rules/default/: coding_agents_rules.yaml
skills/coding-agents-falco-rules/: SKILL.md
skills/prempti-falco-rules/: SKILL.md
tests/: Cargo.toml  README.md  rotation_test.ps1  test_installed_service_macos.sh  test_installed_service_windows.ps1
tests/src/: e2e.rs  interceptor.rs  (+1 more)
tools/coding-agents-kit-ctl/: Cargo.toml  README.md
tools/coding-agents-kit-ctl/src/: hook.rs  logs_pretty.rs  main.rs
tools/coding-agents-kit-ctl/src/daemon/: config.rs  control.rs  mod.rs  pipe_drain.rs  rotate.rs  stop.rs
tools/premptictl/: Cargo.toml  README.md
tools/premptictl/src/: hook.rs  hook_codex.rs  hook_copilot.rs  logs_pretty.rs  main.rs
tools/premptictl/src/daemon/: config.rs  control.rs  mod.rs  pipe_drain.rs  rotate.rs  stop.rs
(+39 files in other folders)
