[package]
name = "coding-agents-kit-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coding-agents-kit-ctl"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
uds_windows = "1.2"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
