[package]
name = "premptictl"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "premptictl"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# `process` enables `kill_process` / `test_kill_process` (safe wrappers
# around `kill(pid, sig)` and `kill(pid, 0)`).
rustix = { version = "1", features = ["process"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1.2"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
